@@ -1,12 +1,11 @@
 package top.easyblog.array;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 /**
- * <h2>力扣第39题<h2/>
- * 给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+ * <h4>力扣第39题 组合总和<h4/>
+ * <p>给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+ * <p/>
  * <p>
  * candidates 中的数字可以无限制重复被选取。
  * <p>
@@ -14,6 +13,14 @@ import java.util.List;
  * <p>
  * 所有数字（包括 target）都是正整数。
  * 解集不能包含重复的组合。 
+ * <pre>
+ * 输入: candidates = [2,3,6,7], target = 7,
+ * 所求解集为:
+ * [
+ *   [7],
+ *   [2,2,3]
+ * ]
+ * <pre/>
  *
  * @author ：huangxin
  * @modified ：
@@ -23,32 +30,44 @@ public class CombinationSum {
 
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
         List<List<Integer>> res = new ArrayList<>();
+        // 排序是为了提前终止搜索
         Arrays.sort(candidates);
-        doSearch(0, 0, target, candidates, new ArrayList<>(), res);
+        dfs(candidates, candidates.length, target, 0, new ArrayDeque<>(), res);
         return res;
     }
 
-    private void doSearch(int sum, int pos, int target, int[] candidates, ArrayList<Integer> integers, List<List<Integer>> res) {
-        if (sum == target) {
-            //找到一条路径符合
-            res.add(integers);
+    /**
+     * @param candidates 数组输入
+     * @param len        输入数组的长度，冗余变量
+     * @param residue    剩余数值
+     * @param begin      本轮搜索的起点下标
+     * @param path       从根结点到任意结点的路径
+     * @param res        结果集变量
+     */
+    private void dfs(int[] candidates,
+                     int len,
+                     int residue,
+                     int begin,
+                     Deque<Integer> path,
+                     List<List<Integer>> res) {
+        if (residue == 0) {
+            // 由于 path 全局只使用一份，到叶子结点的时候需要做一个拷贝
+            res.add(new ArrayList<>(path));
             return;
         }
-        if (sum > target) {
-            return;
-        }
-        for (int i = pos; i < candidates.length; i++) {
-            integers.add(candidates[i]);
-            //递归
-            doSearch(sum + candidates[i], i, target, candidates, integers, res);
-            //条件不满足的时候剪枝
-            integers.remove(integers.size() - 1);
+
+        for (int i = begin; i < len; i++) {
+            // 在数组有序的前提下，剪枝
+            if (residue - candidates[i] < 0) {
+                break;
+            }
+
+            path.addLast(candidates[i]);
+            dfs(candidates, len, residue - candidates[i], i, path, res);
+            path.removeLast();
         }
     }
 
-    public static void main(String[] args) {
-        List<List<Integer>> lists = new CombinationSum().combinationSum(new int[]{2,3,6,7}, 7);
-        lists.forEach(list-> list.forEach(System.out::println));
-    }
+
 
 }
